Restoring compatibility with Java 1.4 VM